# EmulParty-Advance

./: .gitignore  CMakeLists.txt  README.md  chip8_structure_checklist.md  set_sdl_env.sh  수정내역.md
assembler/assembler_v1/: assembler_v1  assembler_v1.cpp
assembler/assembler_v2/: assembler_v2  assembler_v2.cpp
include/boot/: boot_rom.hpp  boot_rom_data.hpp
include/common/: constants.hpp
include/core/: chip8.hpp  chip8_32.hpp  mode_selector.hpp  opcode_table.hpp  opcode_table_32.hpp  stack_frame.hpp  stack_opcodes.hpp
include/debugger/: debugger.hpp
include/platform/: platform.hpp  timer.hpp
include/syscall/: io_device.hpp  io_manager.hpp  sdl_console_io.hpp
roms/: CALC2.ch32  CALC3.ch32  calc.ch32  complete_sum_stack.ch32  hybrid_input_stack.ch32  hybrid_input_stack.hex  hybrid_pixel_stack.ch32  maze.ch32  maze.epa  maze_complete.ch32  pong.ch32  pong_ch32  pong_ch32_revised.ch32  pong_complete.ch32  pong_fixed.ch32  pong_og.epa  simple_stack_test.ch32  simple_test.rom  sum2v7.ch32  sum_ad.ch32  sum_basic.ch32  sum_stack_frame.ch32
src/: main.cpp
src/boot/: boot_rom.cpp  boot_rom_data.cpp
src/core/: chip8.cpp  chip8_32.cpp  mode_selector.cpp  opcode_table.cpp  opcode_table_32.cpp  stack_frame.cpp  stack_opcodes.cpp
src/debugger/: debugger.cpp
src/platform/: platform.cpp  timer.cpp
src/syscall/: io_manager.cpp  sdl_console_io.cpp
test/: test_chip8.cpp
